Fix stupid z-indexing

--- a/web/public/js/directives/cd-action-bar/style.less
+++ b/web/public/js/directives/cd-action-bar/style.less
@@ -44,7 +44,7 @@
 
   background: @cd-blue;
   height: 40px;
-  z-index: 5000;
+  z-index: 500;
   max-width: @screen-cd-breakpoint-lg;
   margin: 0 auto;
   display: flex;
